RESOLVED FIXED42065
[V8] Opening inspector crashes the page when javascript is disabled
https://bugs.webkit.org/show_bug.cgi?id=42065
Summary [V8] Opening inspector crashes the page when javascript is disabled
Pavel Podivilov
Reported 2010-07-12 02:41:27 PDT
[V8] Opening inspector crashes the page when javascript is disabled
Attachments
Proposed patch. (1.73 KB, patch)
2010-07-12 03:07 PDT, Pavel Podivilov
no flags
Pavel Podivilov
Comment 1 2010-07-12 03:07:36 PDT
Created attachment 61203 [details] Proposed patch.
Yury Semikhatsky
Comment 2 2010-07-12 03:54:39 PDT
Comment on attachment 61203 [details] Proposed patch. Will it fix start profiling/evaluate in console/properties editing in Elements panel/running audits etc?
Pavel Podivilov
Comment 3 2010-07-12 04:55:53 PDT
(In reply to comment #2) > (From update of attachment 61203 [details]) > Will it fix start profiling/evaluate in console/properties editing in Elements panel/running audits etc? All this stuff seems to work fine except for accessing window/document from console (got errors like "TypeError: Expecting a function in instanceof check, but got [object DOMWindow]").
Yury Semikhatsky
Comment 4 2010-07-16 08:38:59 PDT
Comment on attachment 61203 [details] Proposed patch. Clearing flags on attachment: 61203 Committed r63550: <http://trac.webkit.org/changeset/63550>
Yury Semikhatsky
Comment 5 2010-07-16 08:39:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.