2010-07-16  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Yury Semikhatsky.

        [V8] V8Proxy::retrieve may return null if javascript is disabled. Add a check
        to avoid crashes in inspected page.
        https://bugs.webkit.org/show_bug.cgi?id=42065

        * bindings/v8/ScriptDebugServer.cpp:
        (WebCore::ScriptDebugServer::addListener):

Canonical link: https://commits.webkit.org/54390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63550 268f45cc-cd09-0410-ab3c-d52691b4dbfc